--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@
 }
 body
 {
-    background-color: rgb(145, 101, 187);
+    background-image: linear-gradient(to left, purple,blueviolet,blue,white,grey,black);
 }
 .container
 {
