--- a/estilo.css
+++ b/estilo.css
@@ -61,7 +61,7 @@ body
 {
     width: 15rem;
     height: 5rem;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2rem;
     background-color: transparent;
     margin-left: 4.25rem;
@@ -77,7 +77,7 @@ a
 }
 .botao:hover
 {
-    background-color: #cccccc;
-    box-shadow: 2px 5px 5px #cccccc;
+    background-color: #fff;
+    box-shadow: 2px 5px 5px #fff;
     transform:translateY(-15px);
 }
