--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 body
 {
-    background-image: linear-gradient(to right,rgb(149, 82, 212), rgb(140, 79, 197),rgb(72, 72, 184));
+    background-image: linear-gradient(to right, rgb(136, 69, 199),rgb(135, 89, 177),rgb(84, 84, 180),rgb(71, 71, 180));
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
