--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
 *
 {
     margin: 0;
@@ -6,81 +7,267 @@
 }
 body
 {
-    background-image: linear-gradient(to right, rgb(136, 69, 199),rgb(135, 89, 177),rgb(84, 84, 180),rgb(71, 71, 180));
+    min-height: 100vh;
+    background-image: linear-gradient(35deg, rgb(178, 133, 219), rgb(146, 86, 202), rgb(67, 67, 218));
     background-repeat: no-repeat;
-    background-attachment: fixed;
 }
-.container
-{
-    padding: 20px;
-    min-width: 0px;
-    max-width: 800px;
-}
-.text-container-1
+input[type="text"]
 {
     position: relative;
-    left: 7rem;
-    top: 3rem;
-    width: 70rem;
-    font-size: 2.6rem;
+    margin-left: 960px;
+    top: -220px;
+    left: 8px;
+    width: 400px;
+    height: 100px;
+    text-align: center;
+    font-size: 1.7rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: #fff;
+    color: #000;
+    border-color: transparent;
+    border-radius: 10px 0px 0px 10px;
+}
+#copiar
+{
+    position: relative;
+    top: -12.55rem;
+    background-color: #fff;
+    border-color: transparent;
+    border-radius: 0px 10px 10px 0px;
+    left: 4px;
+    width: 80px;
+    height: 99.9px;
+    transition: 0.1s;
+}
+#copiar:hover
+{
+    background-color: #4e96c5;
+}
+#copiar:active
+{
+    background-color: rgb(62, 173, 62);
+}
+#copia
+{
+    width: 60px;
+    height: 60px;
+    transition: 0.1s;
+}
+#copia:hover
+{
+    transform: translateY(-5px);
+}
+.wrapper
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+}
+.box div
+{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border: 6px solid rgba(255,255,255,0.4);
+
+}
+.box div:nth-child(1){
+    top: 12%;
+    left: 42%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(2){
+    top: 70%;
+    left: 50%;
+    animation: animate 7s linear infinite;
+}
+.box div:nth-child(3){
+    top: 17%;
+    left: 6%;
+    animation: animate 9s linear infinite;
+}
+.box div:nth-child(4){
+    top: 20%;
+    left: 60%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(5){
+    top: 67%;
+    left: 10%;
+    animation: animate 6s linear infinite;
+}
+.box div:nth-child(6){
+    top: 80%;
+    left: 70%;
+    animation: animate 12s linear infinite;
+}
+.box div:nth-child(7){
+    top: 60%;
+    left: 80%;
+    animation: animate 15s linear infinite;
+}
+.box div:nth-child(8){
+    top: 32%;
+    left: 25%;
+    animation: animate 16s linear infinite;
+}
+.box div:nth-child(9){
+    top: 90%;
+    left: 25%;
+    animation: animate 10s linear infinite;
+}
+.box div:nth-child(10){
+    top: 20%;
+    left: 80%;
+    animation: animate 5s linear infinite;
+}
+
+@keyframes animate
+{
+    0%
+    {   
+        transform: scale(0) translateY(0) rotate(0);
+        opacity: 1;
+    }
+    100%
+    {
+        transform: scale(1.3) translateY(-90px) rotate(360deg);
+        opacity: 1;
+    }
+}
+
+p
+{
+    position: relative;
+    top: 80px;
+    margin-left: 130px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3.7rem;
     color: #fff;
 }
-.text-container-2
+
+h2
 {
-    position: relative;
-    left: 7rem;
-    top: 5rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2.75rem;
+    margin-top: 10px;
+}
+.texto1
+{
     font-size: 7rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
+    margin-left: 140px;
+    margin-top: 100px;
 }
-.text-container-3
+.texto2
 {
-    position: relative;
-    left: 7rem;
-    top: 5rem;
-    font-size: 10rem;
+    font-size: 9rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
+    margin-left: 140px;
+    margin-top: 1px;
 }
-.text-container-4
+.texto3
 {
-    width: 50rem;
     position: relative;
-    left: 30rem;
-    top: 5rem;
-    font-size: 2rem;
+    top: -220px;
+    margin-left: 1050px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 4rem;
     color: #fff;
 }
 .botoes
 {
+    display: flex;
+    flex-direction: row;
+}
+i
+{
     position: relative;
-    margin-left: 4rem;
-    margin-top: 8rem;
+    right: 70px;
+    top: -10px;
+    margin-left: 70px;
+    margin-top: -90px;
+    font-size: 7rem;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+}
+i:hover
+{
+    transform: translateY(-10px);
+    color: #ffffff;
+    opacity: 1;
 }
 .botao
 {
-    width: 17rem;
-    height: 5rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2.2rem;
-    background-color: transparent;
-    margin-left: 4.25rem;
-    border-style: solid;
-    border-radius: 10px;
-    box-shadow: 2px 5px 5px #000;
-    transition: 0.35s;
+    text-decoration: none; 
+    width: 100px;
+    height: 100px;
+    margin-left: 150px;
 }
-a
+.subtexto1
 {
-    text-decoration: none;
-    color: #000;
+    display: none;
+    position: relative;
+    right: 30px;
 }
-.botao:hover
+.subtexto2
 {
-    background-color: #fff;
-    box-shadow: 2px 5px 5px #fff;
-    transform:translateY(-15px);
+    display: none;
+    position: relative;
+    top: -10px;
+    right: 8px;
+}
+.subtexto3
+{
+    display: none;
+    position: relative;
+    top: -10px;
+    right: 30px;
+}
+.subtexto4
+{
+    width: 210px;
+    display: none;
+    position: relative;
+    top: -10px;
+    right: 50px;
+}
+i:hover .subtexto1
+{
+    text-shadow: 1px 4px 3px #000;
+    display: block;
+    z-index: -1;
+}
+i:hover .subtexto2
+{
+    text-shadow: 1px 4px 3px #000;
+    transform: translateY(10px);
+    display: block;
+    z-index: -1;
+}
+i:hover .subtexto3
+{
+    text-shadow: 1px 4px 3px #000000;
+    transform: translateY(10px);
+    display: block;
+    z-index: -1;
+}
+i:hover .subtexto4
+{
+    text-shadow: 1px 4px 3px #000000;
+    transform: translateY(10px);
+    display: block;
+    z-index: -1;
+}
+::-webkit-scrollbar
+{
+    display: none;
 }
