--- a/style.css
+++ b/style.css
@@ -189,84 +189,65 @@ h2
 i
 {
     position: relative;
-    right: 70px;
-    top: -10px;
-    margin-left: 70px;
+    top: 50px;
+    margin-left: 10px;
     margin-top: -90px;
-    font-size: 7rem;
+    font-size: 3rem;
     color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.5s;
 }
-i:hover
-{
-    transform: translateY(-10px);
-    color: #ffffff;
-    opacity: 1;
-}
 .botao
 {
     text-decoration: none; 
-    width: 100px;
+    width: 290px;
     height: 100px;
-    margin-left: 150px;
+    position: relative;
+    left: 90px;
+    top: -80px;
+    margin-left: 50px;
+    border-style: solid;
+    border-radius: 10px;
+    color: #fff;
+    transition: 0.35s;
 }
+.botao:hover
+{
+    transform: translateY(-10px);
+    color: #000;
+    background-color: #fff;
+    box-shadow: 2px 3px 4px #000;
+}
+.botao:hover i
+{
+    color: #000;
+} 
 .subtexto1
 {
-    display: none;
     position: relative;
-    right: 30px;
+    left: 80px;
+    bottom: 10px;
 }
 .subtexto2
 {
-    display: none;
     position: relative;
     top: -10px;
-    right: 8px;
+    left: 97px;
 }
 .subtexto3
 {
-    display: none;
     position: relative;
     top: -10px;
-    right: 30px;
+    left: 80px;
 }
 .subtexto4
 {
     width: 210px;
-    display: none;
     position: relative;
     top: -10px;
-    right: 50px;
-}
-i:hover .subtexto1
-{
-    text-shadow: 1px 4px 3px #000;
-    display: block;
-    z-index: -1;
-}
-i:hover .subtexto2
-{
-    text-shadow: 1px 4px 3px #000;
-    transform: translateY(10px);
-    display: block;
-    z-index: -1;
-}
-i:hover .subtexto3
-{
-    text-shadow: 1px 4px 3px #000000;
-    transform: translateY(10px);
-    display: block;
-    z-index: -1;
-}
-i:hover .subtexto4
-{
-    text-shadow: 1px 4px 3px #000000;
-    transform: translateY(10px);
-    display: block;
-    z-index: -1;
+    left: 65px;
 }
 ::-webkit-scrollbar
 {
