--- a/style.css
+++ b/style.css
@@ -10,6 +10,37 @@ body
     min-height: 100vh;
     background-image: linear-gradient(35deg, rgb(178, 133, 219), rgb(146, 86, 202), rgb(67, 67, 218));
     background-repeat: no-repeat;
+    z-index: 1;
+}
+#paragrafo
+{    position: relative;
+    left: 60rem;
+    top: 200px;
+    text-shadow: 2px 3px 5px #000;
+    display: none;
+}
+.loader
+{
+    position: absolute;
+    top: 25px;
+    left: 90rem;
+    width: 80px;
+    height: 80px;
+    border: 12px solid #fff;
+    border-radius: 50%;
+    border-width: 6px;
+    border-right-color: #4070f4;
+    animation: spin 1s ease infinite;
+    box-shadow: 2px 2px 4px #fff;
+    z-index: 1;
+    display: none;
+    color: #fff;
+    text-shadow: 2px 4px 4px #000;
+}
+@keyframes spin {
+    100%{
+        transform: rotate(360deg);
+    }
 }
 input[type="text"]
 {
@@ -190,9 +221,10 @@ i
 {
     position: relative;
     top: 50px;
-    margin-left: 10px;
+    right: 100px;
+    margin-left: -10px;
     margin-top: -90px;
-    font-size: 3rem;
+    font-size: 3.2rem;
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -202,16 +234,19 @@ i
 .botao
 {
     text-decoration: none; 
-    width: 290px;
-    height: 100px;
+    width: 310px;
+    height: 110px;
     position: relative;
-    left: 90px;
+    left: 10px;
     top: -80px;
     margin-left: 50px;
     border-style: solid;
     border-radius: 10px;
+    border-color: #fff;
+    border-width: 4px;
     color: #fff;
     transition: 0.35s;
+    background-color: transparent;
 }
 .botao:hover
 {
@@ -224,30 +259,39 @@ i
 {
     color: #000;
 } 
+.botao:active
+{
+    transform: translateY(2.25px);
+}
+.botao:focus body
+{
+    display: none;
+}
 .subtexto1
 {
     position: relative;
-    left: 80px;
+    left: 35px;
     bottom: 10px;
 }
 .subtexto2
 {
     position: relative;
     top: -10px;
-    left: 97px;
+    left: 40px;
 }
 .subtexto3
 {
     position: relative;
     top: -10px;
-    left: 80px;
+    left: 30px;
 }
 .subtexto4
 {
-    width: 210px;
+    width: 230px;
     position: relative;
     top: -10px;
-    left: 65px;
+    font-size: 2.8rem;
+    left: 72px;
 }
 ::-webkit-scrollbar
 {
