--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ h2
 {
     font-size: 7rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: italic;
     color: #fff;
     margin-left: 140px;
     margin-top: 100px;
@@ -201,7 +202,8 @@ h2
     font-size: 9rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
-    margin-left: 140px;
+    font-style: italic;
+    margin-left: 120px;
     margin-top: 1px;
 }
 .texto3
